<resources>
    <string name="app_name">Weather application</string>
    <string name="temperature_label">Temperature</string>
    <string name="feels_like_label">Feels like</string>
    <string name="city_coordinates">lt/ln: %s, %s"</string>
    <string name="error">Error</string>
    <string name="reload">Reload</string>
    <string name="Moscow">Moscow</string>
    <string name="sucсess">Success</string>
    <string name="air_humidity">Air humidity</string>
    <string name="humidity">%s",%</string>
    <string name="wind">Wind</string>
    <string name="wind_value">%s"</string>
    <string name="season">Season</string>
    <string name="season_value">%s"</string>
    <string name="summer">Summer</string>
    <string name="kmh">km/h</string>

    <string name="threads">Threads</string>
    <string name="in_main_thread">В главном потоке</string>
    <string name="from_thread">Из потока %d</string>
    <string name="in_thread">Выводим в потоке %s</string>
    <string name="calculate_in_thread">Считаем в потоке %s</string>
    <string name="my_handler_thread">My_Handler_Thread</string>
    <string name="hello_from_thread_fragment">Hello from ThreadsFragment</string>
    <string name="calculate">Расчёт</string>
    <string name="default_number">1</string>
    <string name="calc_in_thread">Расчёт в потоке</string>
    <string name="handler_thread">Handler_Thread</string>
    <string name="service">Service</string>
    <string name="service_broadcast">Service + Broadcast</string>

    <string name="menu_title_history">history</string>

    <string name="content_provider">Content provider</string>
    <string name="authorities">ru.lumanov</string>
    <string name="havepermission">Permission granted</string>
</resources>
