<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/winterbackground"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/headerIcon"
            android:layout_width="match_parent"
            android:layout_height="@dimen/town_header_height"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/city_icon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/cityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/city_name_margin_top"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerIcon"
            tools:text="@string/Moscow"/>

        <TextView
            android:id="@+id/cityCoordinates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cityName"
            tools:text="lt/ln: 55.755826, 37.617299900000035" />


        <TextView
            android:id="@+id/weatherCondition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/weather_icon_margin"
            android:textSize="@dimen/feels_like_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cityCoordinates"
            tools:text="Облачно" />

        <TextView
            android:id="@+id/temperatureLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10_dp"
            android:text="@string/temperature_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weatherCondition" />

        <TextView
            android:id="@+id/temperatureValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15_dp"
            android:textSize="@dimen/temperature_value_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/temperatureLabel"
            tools:text="+15" />

        <TextView
            android:id="@+id/feelsLikeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15_dp"
            android:text="@string/feels_like_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/temperatureValue" />

        <TextView
            android:id="@+id/feelsLikeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15_dp"
            android:textSize="@dimen/feels_like_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/feelsLikeLabel"
            tools:text="-25" />
        <ImageView
            android:id="@id/humidity_icon"
            tools:srcCompat ="@drawable/humidity_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/margin_15_dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/feelsLikeValue"
            />
        <TextView
            android:id="@+id/air_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15_dp"
            android:text="@string/air_humidity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/humidity_icon"
            app:layout_constraintHorizontal_weight="1"/>
        <ImageView
            android:id="@+id/Wind_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/margin_15_dp"
            android:layout_marginEnd="@dimen/margin_15_dp"
            tools:srcCompat="@drawable/windicon"
            app:layout_constraintEnd_toStartOf="@id/air_humidity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/feelsLikeValue"
            />
        <TextView
            android:id="@+id/wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15_dp"
            android:layout_marginEnd="@dimen/margin_15_dp"
            android:text="@string/wind"
            app:layout_constraintEnd_toStartOf="@id/air_humidity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Wind_icon"
            app:layout_constraintHorizontal_weight="1"/>
        <ImageView
            android:id="@+id/season_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/margin_15_dp"
            android:layout_marginStart="@dimen/margin_15_dp"
            tools:srcCompat="@drawable/season_icon"
            app:layout_constraintStart_toEndOf="@id/air_humidity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/feelsLikeValue"
            />
        <TextView
            android:id="@+id/season"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15_dp"
            android:layout_marginStart="@dimen/margin_15_dp"
            android:text="@string/season"
            app:layout_constraintStart_toEndOf="@+id/air_humidity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/season_icon"
            app:layout_constraintHorizontal_weight="1"/>
        <TextView
            android:id="@+id/humidity_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15_dp"
            android:textSize="@dimen/HumidityText"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/air_humidity"
            tools:text="80"
            />
        <TextView
            android:id="@+id/wind_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15_dp"
            android:layout_marginEnd="@dimen/margin_15_dp"
            android:textSize="@dimen/HumidityText"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/air_humidity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wind"
            tools:text="11 km/h"
            />
        <TextView
            android:id="@+id/season_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15_dp"
            android:layout_marginStart="@dimen/margin_15_dp"
            android:textSize="@dimen/HumidityText"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/air_humidity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/season"
            tools:text="@string/summer"
            />

        <include
            android:id="@+id/includedLoadingLayout"
            layout="@layout/loading_layout" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>

